<resources>
    <string name="app_name">OOMatcher</string>
    <string name="global_no_more_data">No More Data!</string>
    <string name="main_title2">Wall</string>
    <string name="main_title3">Task Wall</string>
    <string name="main_title4">Random Go</string>
    <string name="main_title5">Whisper</string>
    <string name="main_left_setting_account">My Account</string>
    <string name="main_left_setting_language">Language Setting</string>
    <string name="main_left_setting_currency">Currency Setting</string>
    <string name="main_left_setting_system">System Setting</string>
    <string name="select_language_title01">OOMATCHER</string>
    <string name="select_language_title02">Language Choose</string>
    <string name="select_language">English</string>
    <string name="select_language_01">English</string>
    <string name="select_language_02">Spanish</string>
    <string name="select_language_03">繁體中文</string>
    <string name="select_language_04">简体中文</string>
    <string name="select_language_btn">NEXT</string>
    <string name="login_login">Log In</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_title">OOMATCHER</string>
    <string name="login_phone_tip">Mobile Number</string>
    <string name="login_pwd_tip">Password</string>
    <string name="register_title">Sign Up</string>
    <string name="register_inviter_tip">Inviter Promote Code</string>
    <string name="register_phone_tip">Mobile Number</string>
    <string name="register_pwd_tip">Password</string>
    <string name="register_compwd_tip">confirm Password</string>
    <string name="register_vcode_tip">Verification code</string>
    <string name="register_vcode">Get\nCode</string>
    <string name="register_phone_error">请输入手机号码</string>
    <string name="register_pwd_error">请输入密码</string>
    <string name="register_pwd_error1">密码不一致</string>
    <string name="register_code_error">请输入验证码</string>
    <string name="my_task">My\nTask</string>
    <string name="my_favorites">My\nFavorites</string>
    <string name="my_photo">Photos</string>
    <string name="my_videos">Videos</string>
    <string name="my_private_mode">Private Mode</string>
    <string name="my_i_rent">Who I Rent</string>
    <string name="my_rent_me">Who Rent Me</string>
    <string name="my_title">Stefanos</string>
    <string name="my_task_title">My Tasks</string>
    <string name="my_id">ID:%1$s</string>
    <string name="my_followers">%1$d Followers</string>
    <string name="my_thumbs">%1$d Thumbs</string>
    <string name="my_authentication">Authentication</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_hotels">My Hotels</string>
    <string name="my_activities">My Activities</string>
    <string name="my_tickets">My Tickets</string>
    <string name="my_schedule">My Schedule</string>
    <string name="my_companion">My Hire Setting to Be The Companion</string>
    <string name="my_map">My Map</string>
    <string name="my_tickets_title">My Tickets</string>
    <string name="my_new_task">New Task</string>
    <string name="task_post_task">Post Task</string>
    <string name="task_task_want">Task I Want</string>
    <string name="my_setting1">My Account</string>
    <string name="my_setting2">Language Setting</string>
    <string name="my_setting3">Currency Setting</string>
    <string name="my_setting4">System Setting</string>
    <string name="new_task_ok">OK</string>
    <string name="new_task_cr_title">Companion Requirements</string>
    <string name="new_task_cr_title_right">Reset</string>
    <string name="new_task_cr_title_sex1">Female</string>
    <string name="new_task_cr_title_sex2">Male</string>
    <string name="new_task_cr_title_sex3">Both</string>
    <string name="new_task_cr_title_age">Age</string>
    <string name="new_task_cr_title_height">Height</string>
    <string name="new_task_cr_title_weight">Weight</string>
    <string name="new_task_cr_title_language">Language</string>
    <string name="new_task_cr_title_occupation">Occupation</string>
    <string name="new_task_cr_title_nationality">Nationality</string>
    <string name="new_task_cr_title_hair_color">Hair Color</string>
    <string name="new_task_cr_title_eye_color">Eye Color</string>
    <string name="new_task_cr_title_eye_authentication">Authentication</string>
    <string name="new_task_cr_title_all">All</string>
    <string name="new_task_cr_title_verified">Verified</string>
    <string name="new_task_normal">Normal</string>
    <string name="new_task_professional">Professional</string>
    <string name="new_task_taskname">Task name</string>
    <string name="new_task_tasktime">Task time</string>
    <string name="new_task_brief">Brief</string>
    <string name="new_task_starttime">Start Time</string>
    <string name="new_task_finishtime">Finish Time</string>
    <string name="new_task_edittime">Edit Time - local time on above city you choose</string>
    <string name="new_task_meet">Where we will Meet</string>
    <string name="new_task_meet_tip">Las Vegas NV,USA</string>
    <string name="new_task_search">search public place</string>
    <string name="new_task_1_place">I will provide Stay Place</string>
    <string name="new_task_i_comp">I will pay travel fee for companion</string>
    <string name="new_task_offer">My offer</string>
    <string name="new_task_do">What we will do</string>
    <string name="new_task_provide">What companion should provide</string>
    <string name="new_task_notes">Notes</string>
    <string name="new_task_require">Require\ncompanopn(s)</string>
    <string name="new_task_add_com_title">Companion Requirement</string>
    <string name="new_task_removed">How Long The Task Will Be Removed</string>
    <string name="new_task_removed_from">From Task Wall</string>
    <string name="new_task_day">Day</string>
    <string name="new_task_hour">Hour</string>
    <string name="new_task_deposit">Deposit Requirement</string>
    <string name="new_task_deposit1">Depends on companion</string>
    <string name="new_task_deposit2">Companion must pay deposit to get the task</string>
    <string name="new_task_post">Post</string>
    <string name="new_task_date_1">M</string>
    <string name="new_task_date_2">T</string>
    <string name="new_task_date_3">W</string>
    <string name="new_task_date_4">T</string>
    <string name="new_task_date_5">F</string>
    <string name="new_task_date_6">S</string>
    <string name="new_task_date_7">S</string>
    <string name="my_task_list_companions">companions are interested in this task</string>
    <string name="my_task_list_edit">Edit This Task</string>
    <string name="my_task_list_delete">Delete This Task</string>
    <string name="my_task_list_details">View details</string>
    <string name="my_task_list_daojishi">%1$sD %2$s:%3$s:%4$s</string>
    <string name="my_task_list_waitting_accepted">Already Be Accepted</string>
    <string name="my_task_list_accepted">Waitting For Being Accepted</string>
    <string name="my_task_list_interested">Who is interested</string>
    <string name="who_i_rent">Who I Rent</string>
    <string name="who_rent_me">Who Rent Me</string>
    <string name="cancel">Cancel</string>
    <string name="pwSubmit">OK</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hours">Hour</string>
    <string name="minutes">Minute</string>
    <string name="seconds">Second</string>
    <string name="user_task_filter_title">Filter</string>
    <string name="user_task_filter_right">Reset</string>
    <string name="user_task_filter_com">Companion</string>
    <string name="user_task_filter_all">All</string>
    <string name="user_task_filter_type">Type of Service Offering</string>
    <string name="task_wall_title">Task Wall</string>
    <string name="task_wall_key_words">Key Words</string>
    <string name="task_wall_tab_tasks">Tasks</string>
    <string name="task_wall_tab_nearest">Nearest</string>
    <string name="task_wall_tab_lastest">Lastest</string>
    <string name="task_wall_sort">Sort</string>
    <string name="task_wall_to">To</string>
    <string name="task_wall_meet_point">Meet Point</string>
    <string name="task_wall_more_details">More Details</string>
    <string name="user_task_type1">Recommend</string>
    <string name="user_task_type2">Meet Now</string>
    <string name="user_task_type3">Nearest</string>
    <string name="user_task_type4">Popular</string>
    <string name="user_task_type5">Latest</string>
    <string name="user_task_from">From</string>
    <string name="user_task_local">Local</string>
    <string name="user_task_aboard">Aboard</string>
    <string name="user_task_online">Online</string>
    <string name="filter_service_type1">Online</string>
    <string name="filter_service_type2">Local</string>
    <string name="filter_service_type3">Aboard</string>
    <string name="filter_service_type4">Unrestricted</string>
    <string name="filter_move">Move</string>
    <string name="filter_local_service">Local Service</string>
    <string name="filter_local_service1">Who Can Provide Stay Place</string>
    <string name="filter_abroad_service">Abroad Service</string>
    <string name="filter_abroad_service1">Who Can Pay Personal Travel Fee</string>
    <string name="filter_date_setting">Available Date Setting</string>
    <string name="my_hire_setting">My Hire Setting</string>
    <string name="meet_now">Meet Now</string>
    <string name="local">Local</string>
    <string name="aboard">Aboard</string>
    <string name="online_dating">Online Dating</string>
    <string name="online">Online</string>
    <string name="occupation">Occupation</string>
    <string name="eye_color">Eye Color</string>
    <string name="hair_color">Hair Color</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="third_language">Third Language</string>
    <string name="second_language">Second Language</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="nationality">Nationality</string>
    <string name="looking_for">Looking For</string>
    <string name="this_information_won">This information won’t be shown on your page</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="currency_you_change">Currency You Change</string>
    <string name="language">Language</string>
    <string name="wallet_password">Wallet\nPassword</string>
    <string name="up_coming">Up\nComing</string>
    <string name="history_wall">History\nWall</string>
    <string name="sort">Sort</string>
    <string name="lssued_by">lssued by(Country)</string>
    <string name="passport">Passport</string>
    <string name="passport_no">Passport No</string>
    <string name="passport_photo">Passport Photo</string>
    <string name="only_for_certification_purposes">Only for certification purposes</string>
    <string name="apply">Apply</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="your_name">Your Name</string>
    <string name="choose_normal_topic">Choose The Offer Service Topic</string>
    <string name="create_personal_service_name">Create Personal Service Name</string>
    <string name="stay_place">I will provide Stay Place</string>
    <string name="meet_place">Where we will Meet</string>
    <string name="rents_tip">My Rents(max to 5 different rates)</string>
    <string name="will_do">What we will do</string>
    <string name="will_provide">What I will provide</string>
    <string name="notes">Notes</string>
    <string name="add_photos_videos">Add Photos &#038; Videos</string>
    <string name="age_requirement">Age Requirement</string>
    <string name="age_tips">Guest ages 18 and up can attend</string>
    <string name="pay_deposit">I am willing to pay deposit</string>
</resources>