<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/main_activity_bg"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/include_title_normal_bg_black"/>
    <RelativeLayout
        android:id="@+id/passport_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height"
        android:background="@drawable/huase_bg">
        <TextView
            android:id="@+id/title_type_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="@dimen/sp_16"
            android:text="@string/passport"/>
        <ImageView
            android:id="@+id/left_img"
            android:layout_width="@dimen/normal_height"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_alignParentLeft="true"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:src="@drawable/image_bakc"/>
        <ImageView
            android:id="@+id/right_img"
            android:layout_width="@dimen/normal_height"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/image_next"/>
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/your_name"
        android:textColorHint="@color/black"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/black"
        android:background="@color/bg_main"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height"
        android:gravity="left|center_vertical"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/dp_12"
        android:textSize="@dimen/sp_16"
        android:text="@string/lssued_by"/>
    <EditText
        android:id="@+id/no_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:hint="@string/passport_no"
        android:textColorHint="@color/white"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"
        android:background="@color/bg_main"/>
    <TextView
        android:id="@+id/photo_txt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height"
        android:gravity="left|center_vertical"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/dp_12"
        android:textSize="@dimen/sp_16"
        android:text="@string/passport_photo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/dp_12"
            android:textSize="@dimen/sp_16"
            android:layout_weight="1"
            android:text="@string/front"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/dp_12"
            android:textSize="@dimen/sp_16"
            android:text="@string/back"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/front_img"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:layout_marginRight="3dp"
            android:src="@drawable/image_add_button"/>
        <ImageView
            android:id="@+id/back_img"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:src="@drawable/image_add_button"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height"
        android:gravity="left|center_vertical"
        android:textColor="@color/login_tip_color"
        android:layout_marginLeft="@dimen/dp_12"
        android:textSize="@dimen/sp_16"
        android:text="@string/only_for_certification_purposes"/>

    <TextView
        android:id="@+id/apply_txt"
        android:layout_width="120dp"
        android:layout_height="@dimen/login_item_height"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:textSize="@dimen/login_btn_size"
        android:background="@drawable/image_login_button"
        android:textColor="#FFFFFFFF"
        android:text="@string/apply"/>
</LinearLayout>