<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/my_main_bg"
              android:visibility="visible"
              android:padding="0dp"
              android:minWidth="200dp"
              android:layout_width="200dp"
              android:layout_height="220dp">
    <ImageView
        android:id="@+id/close_img"
        android:layout_width="@dimen/normal_item_image_width"
        android:layout_height="@dimen/normal_item_image_height"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:padding="8dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/image_userinfo_top_icon"/>

        <TextView
            android:id="@+id/language01"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            android:gravity="left|center_vertical"
            android:paddingLeft="12dp"
            android:textColor="@color/white"
            android:text="@string/my_setting1"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/language02"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            android:gravity="left|center_vertical"
            android:paddingLeft="12dp"
            android:textColor="@color/white"
            android:text="@string/my_setting2"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            />
    <TextView
        android:id="@+id/language03"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height"
        android:gravity="left|center_vertical"
        android:paddingLeft="12dp"
        android:textColor="@color/white"
        android:text="@string/my_setting3"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        />
    <TextView
        android:id="@+id/language04"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height"
        android:gravity="left|center_vertical"
        android:paddingLeft="12dp"
        android:textColor="@color/white"
        android:text="@string/my_setting4"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        />

</LinearLayout>