<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include
        android:id="@+id/title"
        layout="@layout/include_title_normal"/>
    <RadioGroup
            android:id="@+id/type_Group"
            android:layout_below="@id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_height"
            android:background="@drawable/huase_bg"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/type_rBtn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="center"
                android:paddingLeft="0dp"
                android:text="@string/up_coming"
                android:textColor="@color/companion_re_title_color_selector"
                android:textSize="14sp"/>
            <RadioButton
                android:id="@+id/type_rBtn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="center"
                android:paddingLeft="0dp"
                android:text="@string/history_wall"
                android:textColor="@color/companion_re_title_color_selector"
                android:textSize="14sp"/>

        </RadioGroup>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/text_fense_normal"
            android:textSize="@dimen/sp_18"
            android:paddingLeft="@dimen/dp_24"
            android:paddingRight="@dimen/dp_24"
            android:text="@string/sort"/>
    </RelativeLayout>
</RelativeLayout>